--- a/src/main/resources/templates/layouts/layout.html
+++ b/src/main/resources/templates/layouts/layout.html
@@ -38,9 +38,9 @@
                    aria-expanded="false">Program
                 </a>
                 <div class="dropdown-menu " aria-labelledby="program_dropdown">
-                    <a class="dropdown-item" href="#">Action</a>
-                    <a class="dropdown-item" href="#">Another action</a>
-                    <a class="dropdown-item" href="#">Something else here</a>
+                    <a class="dropdown-item" href="/program">Program Manage</a>
+                    <a class="dropdown-item" href="#">Url Manage</a>
+                    <a class="dropdown-item" href="#">Alarm Manage</a>
                 </div>
             </li>
             <li class="nav-item dropdown">
@@ -48,9 +48,9 @@
                    aria-expanded="false">System
                 </a>
                 <div class="dropdown-menu dropdown-menu-right" aria-labelledby="system_dropdown">
-                    <a class="dropdown-item" href="#">Action</a>
-                    <a class="dropdown-item" href="#">Another action</a>
-                    <a class="dropdown-item" href="#">Something else here</a>
+                    <a class="dropdown-item" href="#">Configuration</a>
+                    <!--<a class="dropdown-item" href="#">Another action</a>-->
+                    <!--<a class="dropdown-item" href="#">Something else here</a>-->
                 </div>
             </li>
         </ul>
