--- a/src/main/resources/templates/layouts/layout.html
+++ b/src/main/resources/templates/layouts/layout.html
@@ -35,12 +35,12 @@
             </li>
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="program_dropdown" data-toggle="dropdown" aria-haspopup="true"
-                   aria-expanded="false">Program
+                   aria-expanded="false">Monitoring
                 </a>
                 <div class="dropdown-menu " aria-labelledby="program_dropdown">
+                    <a class="dropdown-item" href="/url">Url Manage</a>
                     <a class="dropdown-item" href="/program">Program Manage</a>
-                    <a class="dropdown-item" href="#">Url Manage</a>
-                    <a class="dropdown-item" href="#">Alarm Manage</a>
+                    <a class="dropdown-item" href="/alarm">Alarm Manage</a>
                 </div>
             </li>
             <li class="nav-item dropdown">
