--- a/src/main/resources/templates/url/urlManage.html
+++ b/src/main/resources/templates/url/urlManage.html
@@ -1,10 +1,101 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:th="http://www.thymeleaf.org"
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      xmlns:paging="http://www.thymeleaf.org"
+      layout:decorate="~{layouts/layout}">
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+    <title>URL Manage</title>
 
-</body>
+    <!--<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/billboard.js/1.7.1/billboard.min.css"/>-->
+</head>
+
+<div layout:fragment="page_content" id="page_content">
+
+    <div class="container-fluid">
+        <div class="row">
+            <!--<div class="col-sm-6 col-xs-12">-->
+            <div class="col">
+                <div class="card">
+                    <div class="card-body">
+                        <h3 class="card-title">URL Manage</h3>
+                        <p class="card-text">
+                            모니터링하기 위한 URL을 등록/수정 할 수 있는 관리 페이지 입니다.
+                        </p>
+                        <form id="frmSearch" class="form-inline">
+                            <input type="hidden" name="pageNumber" value="1">
+                            <!--<div class="form-group pr-1">-->
+                            <!--<select class="form-control form-control-sm">-->
+                            <!--<option>테스트</option>-->
+                            <!--<option>테스트2222</option>-->
+                            <!--</select>-->
+                            <!--</div>-->
+                            <!--<div class="form-group pr-1">-->
+                            <!--<input type="text" class="form-control form-control-sm" placeholder="Entered Program Name"/>-->
+                            <!--</div>-->
+                            <div class="form-group pr-1">
+                                <a class="btn btn-outline-primary btn-sm" href="/url/form">ADD</a>
+                            </div>
+                        </form>
+                        <br>
+                        <div class="table-responsive">
+                            <table class="table">
+                                <thead>
+                                <tr>
+                                    <th class="text-center">IDX</th>
+                                    <th class="text-center">Status Code</th>
+                                    <th>URL</th>
+                                    <th class="text-center">Function</th>
+                                </tr>
+                                </thead>
+                                <tbody>
+                                <tr th:each="result : ${resultList}">
+                                    <td class="text-center" th:text="${result.urlIdx}"></td>
+                                    <td class="text-center">
+
+                                        <span th:if="${result.healthStatusCd.toString().equals('HEALTH')}">
+                                            <i class="fas fa-smile-wink  fa-2x" style="color: #659bf2;"></i>
+                                        </span>
+                                        <span th:if="${result.healthStatusCd.toString().equals('WARNING')}">
+                                            <i class="fas fa-exclamation-circle  fa-2x" style="color: #f7a151;"></i>
+                                        </span>
+                                        <span th:if="${result.healthStatusCd.toString().equals('ERROR')}">
+                                            <i class="fas fa-skull-crossbones fa-2x" style="color: #f70404;"></i>
+                                        </span>
+                                    </td>
+                                    <td th:text="${result.url}"></td>
+                                    <td class="text-center">
+                                        <a class="btn btn-outline-warning btn-sm" th:href="|/url/form/${result.urlIdx}|">
+                                            MODIFY
+                                        </a>
+                                    </td>
+                                </tr>
+                                </tbody>
+                            </table>
+
+                            <nav aria-label="Page navigation">
+                                <ul class="pagination justify-content-end" paging:pagination="${pagination}" jsFuncName="movePageCustom">
+                                </ul>
+                            </nav>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<th:block layout:fragment="includeScripts">
+    <!--<script src="https://d3js.org/d3.v4.min.js"></script>-->
+    <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/billboard.js/1.7.1/billboard.min.js"></script>-->
+</th:block>
+<th:block layout:fragment="scripts">
+    <script>
+        function movePageCustom(pageNo) {
+            $("#frmSearch [name='pageNumber']").val(pageNo);
+            $("#frmSearch").submit();
+        }
+    </script>
+</th:block>
 </html>
+
