--- a/src/main/resources/templates/layouts/layout.html
+++ b/src/main/resources/templates/layouts/layout.html
@@ -6,7 +6,6 @@
       class="h-100"
 >
 <head>
-
     <title layout:title-pattern="$CONTENT_TITLE - $LAYOUT_TITLE">B.M</title>
     <meta charset="utf-8"/>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
@@ -48,23 +47,27 @@
                    aria-expanded="false">System
                 </a>
                 <div class="dropdown-menu dropdown-menu-right" aria-labelledby="system_dropdown">
-                    <a class="dropdown-item" href="#">Configuration</a>
+                    <a class="dropdown-item" href="/system/configuration">Configuration</a>
                     <!--<a class="dropdown-item" href="#">Another action</a>-->
                     <!--<a class="dropdown-item" href="#">Something else here</a>-->
                 </div>
             </li>
         </ul>
         <ul class="navbar-nav ml-auto">
-            <li class="nav-item">
-                <a class="nav-link align-middle" href="/">
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="user_dropdown" data-toggle="dropdown" aria-haspopup="true"
+                   aria-expanded="false">
                     <i class="fas fa-user" style="font-size: 1.4em;"></i>
                 </a>
+                <div class="dropdown-menu dropdown-menu-right" aria-labelledby="user_dropdown">
+                    <a class="dropdown-item" href="#">Logout</a>
+                </div>
+
             </li>
         </ul>
     </div>
 </nav>
 <main role="main" class="flex-shrink-0">
-
     <div layout:fragment="page_content" style="padding-top: 70px;"></div>
 </main>
 <footer class="footer mt-auto py-3">
