--- a/src/main/resources/templates/layouts/emptyLayout.html
+++ b/src/main/resources/templates/layouts/emptyLayout.html
@@ -24,6 +24,7 @@
 <script th:src="@{/webjars/jquery/jquery.min.js}"></script>
 <script th:src="@{/webjars/popper.js/umd/popper.min.js}"></script>
 <script th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>
+<script th:src="@{/webjars/axios/0.18.0/dist/axios.min.js}"></script>
 <script th:src="@{/static/js/common.js}"></script>
 <th:block layout:fragment="includeScripts"></th:block>
 <th:block layout:fragment="scripts"></th:block>
