--- a/src/main/resources/templates/user/login.html
+++ b/src/main/resources/templates/user/login.html
@@ -116,7 +116,7 @@
                 return;
             }
 
-            var url = "/api/v1/user/login";
+            var url = "/user/api/v1/login";
             var contentType = "application/x-www-form-urlencoded; charset=UTF-8";
             var method = "POST";
             var data = $("#frmLogin").serialize();
@@ -171,7 +171,7 @@
                 return;
             }
 
-            var url = "/api/v1/user/signup";
+            var url = "/user/api/v1/signup";
             var contentType = "application/x-www-form-urlencoded; charset=UTF-8";
             var method = "POST";
             var data = $("#signUpFrm").serialize();
