--- a/src/main/resources/templates/layouts/layout.html
+++ b/src/main/resources/templates/layouts/layout.html
@@ -36,9 +36,9 @@
                    aria-expanded="false">Monitoring
                 </a>
                 <div class="dropdown-menu " aria-labelledby="monitor_dropdown">
-                    <a class="dropdown-item" href="/url">Url Manage</a>
-                    <a class="dropdown-item" href="/program">Program Manage</a>
-                    <a class="dropdown-item" href="/alarm">Alarm Manage</a>
+                    <a class="dropdown-item" href="#">Url Manage</a>
+                    <a class="dropdown-item" href="#">Program Manage</a>
+                    <a class="dropdown-item" href="#">Alarm Manage</a>
                 </div>
             </li>
             <li class="nav-item dropdown">
@@ -69,7 +69,7 @@
                     <i class="fas fa-user" style="font-size: 1.4em;"></i>
                 </a>
                 <div class="dropdown-menu dropdown-menu-right" aria-labelledby="user_dropdown">
-                    <a class="dropdown-item" href="#">Logout</a>
+                    <a class="dropdown-item" onclick="logout()">Logout</a>
                 </div>
 
             </li>
@@ -88,6 +88,7 @@
 <script th:src="@{/webjars/jquery/jquery.min.js}"></script>
 <script th:src="@{/webjars/popper.js/umd/popper.min.js}"></script>
 <script th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>
+<script th:src="@{/webjars/axios/0.18.0/dist/axios.min.js}"></script>
 <script th:src="@{/static/js/common.js}"></script>
 <th:block layout:fragment="includeScripts"></th:block>
 <th:block layout:fragment="scripts"></th:block>
