--- a/src/main/resources/templates/manage/program/programManage.html
+++ b/src/main/resources/templates/manage/program/programManage.html
@@ -142,12 +142,11 @@
     </div>
 </div>
 <th:block layout:fragment="includeScripts">
-    <script src="/webjars/select2/4.0.5/js/select2.min.js"></script>
+    <script th:src="@{/webjars/select2/4.0.5/js/select2.min.js}"></script>
 </th:block>
 <th:block layout:fragment="scripts">
     <script>
         function bindSelect2() {
-            console.log("ttt");
             $(".select2-bind").select2({
                 placeholder: "연결할 URL 이름을 검색하세요.",
                 theme: "bootstrap",
@@ -197,30 +196,30 @@
             }
 
             var url = "/manage/program/api/v1";
-            var contentType = "application/x-www-form-urlencoded; charset=UTF-8";
-            var method = "POST";
-            var data = $("#programFrm").serialize();
 
             if ($("#programFrm [name='programIdx']").val().length !== 0) {
-                method = "PUT";
-                contentType = "application/json;";
-                data = JSON.stringify($("#programFrm").serializeObject());
-            }
+                var tmpData = $("#programFrm").serializeObject();
+                tmpData['urlIdxs'] = $("#programFrm [name='urlIdxs']").val();
 
-            $.ajax({
-                url: url,
-                data: data,
-                type: method,
-                contentType: contentType,
-                async: false,
-                dataType: 'json',
-                error: function (error) {
-                    alert("실패");
-                },
-                success: function (data) {
-                    location.reload();
-                }
-            });
+                axios.put(url, JSON.stringify(tmpData), {headers: {"Content-type": "application/json"}})
+                    .then(function (response) {
+                        console.log(response);
+                        location.reload();
+                    })
+                    .catch(function (error) {
+                        alert("실패 : " + error);
+                    });
+
+            } else {
+                axios.post(url, $("#programFrm").serialize())
+                    .then(function (response) {
+                        console.log(response);
+                        location.reload();
+                    })
+                    .catch(function (error) {
+                        alert("실패 : " + error);
+                    });
+            }
         }
 
         function openModifyProgram(thisDom) {
@@ -229,15 +228,12 @@
             $("#programFrm")[0].reset();
             $('#url_idxs').find('option').remove();
 
-            $.ajax({
-                url: "/manage/program/api/v1/" + programIdx,
-                type: 'GET',
-                async: false,
-                dataType: 'json',
-                error: function (error) {
-                    alert("실패");
-                },
-                success: function (data) {
+            var url = "/manage/program/api/v1/" + programIdx;
+
+            axios.get(url, $("#programFrm").serialize())
+                .then(function (response) {
+                    var data = response.data;
+
                     $.each(data.data.urlList, function (i, item) {
                         $('#url_idxs').append($('<option>', {
                             value: item.urlIdx,
@@ -258,9 +254,12 @@
                     $("#programModal").modal();
 
                     bindSelect2();
-                }
-            });
 
+                    console.log(response);
+                })
+                .catch(function (error) {
+                    alert("실패 : " + error);
+                });
         }
 
         function movePageCustom(pageNo) {
