--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -5,28 +5,28 @@
       layout:decorate="~{layouts/layout}">
 <head>
     <title>Dashboard</title>
-    <style>
-        .my-card
-        {
-            position:absolute;
-            left:40%;
-            top:-20px;
-            border-radius:50%;
-        }
-    </style>
 </head>
-<div layout:fragment="page_content" id="page_content">
+<div layout:fragment="page_content" id="page_content" style="padding-top: 40px;">
+    <div class="jumbotron">
+        <div class="container-fluid">
+            <h1>Motiful</h1>
+            <p>Monitoring + Beautiful!</p>
+            <p>
+                <a class="btn btn-primary btn-sm" href="#" role="button">Program Manage</a>
+            </p>
+        </div>
+    </div>
+
     <div class="container-fluid">
 
         <div class="row">
-            <!--<div class="col-sm-6 col-xs-12">-->
             <div class="col">
                 <div class="card">
                     <div class="card-body">
                         <h3 class="card-title mb-3">URL Status</h3>
                         <div class="row">
                             <div th:each="statusCnt : ${statusCntList}" th:remove="tag">
-                                <div class="col-sm-4">
+                                <div class="col-sm-6 col-md-4">
                                     <div class="card ">
                                         <div class="row">
                                             <div class="col-6">
@@ -44,10 +44,9 @@
                                             </div>
                                             <div class="col-6">
                                                 <div class="text-info text-center mt-3"><h4 th:text="${statusCnt.healthStatusCd}"></h4></div>
-                                                <div class="text-info text-center mt-2" ><h1 th:text="${statusCnt.urlCnt}"></h1></div>
+                                                <div class="text-info text-center mt-2"><h1 th:text="${statusCnt.urlCnt}"></h1></div>
                                             </div>
                                         </div>
-
 
 
                                     </div>
@@ -59,9 +58,28 @@
             </div>
         </div>
 
-
         <div class="row">
-
+            <div class="col-sm-4">
+                <div class="card">
+                    <div class="card-body">
+                        <h5 class="card-title mb-3">URL Status</h5>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-4">
+                <div class="card">
+                    <div class="card-body">
+                        <h5 class="card-title mb-3">URL Status</h5>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-4">
+                <div class="card">
+                    <div class="card-body">
+                        <h5 class="card-title mb-3">URL Status</h5>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </div>
