--- a/src/main/resources/templates/layouts/layout.html
+++ b/src/main/resources/templates/layouts/layout.html
@@ -27,13 +27,17 @@
     <div class="collapse navbar-collapse" id="navbarText">
         <ul class="navbar-nav mr-auto" style="font-size:16px;">
             <li class="nav-item">
-                <a class="nav-link" href="/dashboard">Home
+                <a class="nav-link" href="/dashboard">
+                    <i class="fas fa-home"></i>
+                    Home
                     <span class="sr-only">(current)</span>
                 </a>
             </li>
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="monitor_dropdown" data-toggle="dropdown" aria-haspopup="true"
-                   aria-expanded="false">Monitoring
+                   aria-expanded="false">
+                    <i class="fas fa-desktop"></i>
+                    Monitoring
                 </a>
                 <div class="dropdown-menu " aria-labelledby="monitor_dropdown">
                     <a class="dropdown-item" href="#">Url Manage</a>
@@ -43,7 +47,9 @@
             </li>
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="manage_dropdown" data-toggle="dropdown" aria-haspopup="true"
-                   aria-expanded="false">Manage
+                   aria-expanded="false">
+                    <i class="fas fa-tools"></i>
+                    Manage
                 </a>
                 <div class="dropdown-menu " aria-labelledby="manage_dropdown">
                     <a class="dropdown-item" href="/manage/url">Url Manage</a>
@@ -53,10 +59,13 @@
             </li>
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="system_dropdown" data-toggle="dropdown" aria-haspopup="true"
-                   aria-expanded="false">System
+                   aria-expanded="false">
+                    <i class="fas fa-cog"></i>
+                    System
                 </a>
                 <div class="dropdown-menu dropdown-menu-right" aria-labelledby="system_dropdown">
                     <a class="dropdown-item" href="/system/configuration">Configuration</a>
+                    <a class="dropdown-item" href="/system/user">User Manage</a>
                     <!--<a class="dropdown-item" href="#">Another action</a>-->
                     <!--<a class="dropdown-item" href="#">Something else here</a>-->
                 </div>
