--- a/src/main/resources/templates/manage/program/programManage.html
+++ b/src/main/resources/templates/manage/program/programManage.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:th="http://www.thymeleaf.org"
-      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-      xmlns:paging="http://www.thymeleaf.org"
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" xmlns:paging="http://www.w3.org/1999/xhtml"
       layout:decorate="~{layouts/layout}">
 <head>
     <title>Program Manage</title>
-    <link th:href="@{/webjars/select2-bootstrap-theme/0.1.0-beta.10/select2-bootstrap.min.css}" rel="stylesheet"/>
+    <link href="//cdnjs.cloudflare.com/ajax/libs/select2-bootstrap-theme/0.1.0-beta.10/select2-bootstrap.min.css" rel="stylesheet"/>
     <link th:href="@{/webjars/select2/4.0.5/css/select2.min.css}" rel="stylesheet"/>
 </head>
 <div layout:fragment="page_content" id="page_content">
@@ -19,58 +18,97 @@
                         <p class="card-text">
                             프로그램 등록/수정이 가능한 관리 페이지 입니다.
                         </p>
-                        <form id="frmSearch" class="form-inline">
-                            <input type="hidden" name="pageNumber" value="1">
-                            <!--<div class="form-group pr-1">-->
-                            <!--<select class="form-control form-control-sm">-->
-                            <!--<option>테스트</option>-->
-                            <!--<option>테스트2222</option>-->
-                            <!--</select>-->
-                            <!--</div>-->
-                            <!--<div class="form-group pr-1">-->
-                            <!--<input type="text" class="form-control form-control-sm" placeholder="Entered Program Name"/>-->
-                            <!--</div>-->
+                        <div class="form-inline">
                             <div class="form-group pr-1">
                                 <button class="btn btn-outline-primary btn-sm" onclick="addOpenModal(); return false;">ADD</button>
                             </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col">
+                <div class="card">
+                    <div class="card-body">
+                        <form id="frmSearch" class="form-inline mb-1 w-100 justify-content-end">
+                            <input type="hidden" name="pageNumber" value="1">
+                            <div class="form-group">
+                                <select class="form-control form-control-sm">
+                                    <option>Idx</option>
+                                    <option>Program Name</option>
+                                    <option>Created At</option>
+                                    <option>Updated At</option>
+                                </select>
+                            </div>
+                            <div class="form-group mr-2">
+                                <select class="form-control form-control-sm">
+                                    <option>20 Row</option>
+                                    <option>50 Row</option>
+                                    <option>100 Row</option>
+                                </select>
+                            </div>
+                            <div class=" form-group">
+                                <select class="form-control form-control-sm">
+                                    <option>==Search Type==</option>
+                                    <option>Created User Id</option>
+                                    <option>Updated User Id</option>
+                                    <option>Program Name</option>
+                                    <option>Memo</option>
+                                </select>
+                            </div>
+                            <div class=" form-group">
+                                <input type="text" class="form-control w-100 form-control-sm" placeholder="Entered Program Name"/>
+                            </div>
+                            <div class=" form-group">
+                                <button class="btn btn-outline-primary btn-sm">
+                                    <i class="fas fa-search"></i> Search
+                                </button>
+                            </div>
                         </form>
-                        <br>
                         <div class="table-responsive">
                             <table class="table">
+                                <colgroup>
+                                    <col width="5%">
+                                    <col width="*">
+                                    <col width="10%">
+                                    <col width="10%">
+                                    <col width="10%">
+                                    <col width="10%">
+                                </colgroup>
                                 <thead>
                                 <tr>
                                     <th class="text-center">IDX</th>
                                     <th>Program Name</th>
-                                    <th class="text-center">Memo</th>
+                                    <!--<th class="text-center">Memo</th>-->
+                                    <th class="text-center">Created User Id</th>
+                                    <th class="text-center">Created At</th>
                                     <th class="text-center">Updated User Id</th>
                                     <th class="text-center">Updated At</th>
-                                    <th class="text-center">Function</th>
                                 </tr>
                                 </thead>
                                 <tbody>
                                 <tr th:each="result : ${resultList}">
                                     <td class="text-center" th:text="${result.programIdx}"></td>
                                     <td>
-                                        <span th:text="${result.programName}" th:remove="tag"></span>
+                                        <div th:with="condition=${#strings.isEmpty(result.programName)} == false and ${#strings.length(result.programName)} > 30"
+                                             th:remove="tag">
+                                                <span th:if="${condition}" th:text="|${#strings.substring(result.programName, 0, 30)}...|"
+                                                      th:remove="tag"></span>
+                                            <span th:unless="${condition}" th:text="${result.programName}"></span>
+                                        </div>
+
+                                        <a class="btn btn-outline-danger btn-xs float-right"
+                                           th:data-program_idx="${result.programIdx}"
+                                           onclick="openModifyProgram(this)">
+                                            <i class="fas fa-edit"></i> EDIT
+                                        </a>
                                     </td>
 
-                                    <div th:with="condition=${#strings.isEmpty(result.memo)} == false and ${#strings.length(result.memo)} > 30"
-                                         th:remove="tag">
-                                        <td th:if="${condition}" th:text="|${#strings.substring(result.memo, 0, 30)}...|"></td>
-                                        <td th:unless="${condition}" th:text="${result.memo}"></td>
-                                    </div>
-
+                                    <td class="text-center" th:text="${result.createdUserId}"></td>
+                                    <td class="text-center" th:text="${result.createdAt}"></td>
                                     <td class="text-center" th:text="${result.updatedUserId}"></td>
                                     <td class="text-center" th:text="${result.updatedAt}"></td>
-                                    <td class="text-center">
-                                        <div class="btn-group" role="group">
-                                            <button class="btn btn-outline-info btn-sm"
-                                                    th:data-program_idx="${result.programIdx}"
-                                                    onclick="openModifyProgram(this)">
-                                                MODIFY
-                                            </button>
-                                        </div>
-                                    </td>
                                 </tr>
                                 </tbody>
                             </table>
@@ -132,8 +170,12 @@
                 <!-- Modal footer -->
                 <div class="modal-footer btn-footer">
                     <div class="btn-group btn-block">
-                        <button type="button" class="btn" onclick="save(); return false;">Save</button>
-                        <button type="button" class="btn" data-dismiss="modal">Close</button>
+                        <button type="button" class="btn" onclick="save(); return false;">
+                            <i class="far fa-save"></i> Save
+                        </button>
+                        <button type="button" class="btn" data-dismiss="modal">
+                            <i class="fas fa-times"></i> Close
+                        </button>
                     </div>
                 </div>
 
