--- a/src/main/resources/templates/manage/program/programManage.html
+++ b/src/main/resources/templates/manage/program/programManage.html
@@ -31,7 +31,7 @@
             <div class="col">
                 <div class="card">
                     <div class="card-body">
-                        <form id="frmSearch" class="form-inline mb-1 w-100 justify-content-end">
+                        <form id="frmSearch" class="form-inline w-100 justify-content-end border border-bottom-0">
                             <input type="hidden" name="pageNumber" value="1">
                             <div class="form-group">
                                 <select class="form-control form-control-sm">
@@ -79,7 +79,7 @@
                                 <thead>
                                 <tr>
                                     <th class="text-center">IDX</th>
-                                    <th>Program Name</th>
+                                    <th style="min-width: 180px;">Program Name</th>
                                     <!--<th class="text-center">Memo</th>-->
                                     <th class="text-center">Created User Id</th>
                                     <th class="text-center">Created At</th>
