--- a/src/main/resources/static/css/common.css
+++ b/src/main/resources/static/css/common.css
@@ -4,6 +4,37 @@ body {
     font-family: sans-serif, Helvetica, "Apple SD Gothic Neo", sans-serif;
 }
 
+#wrapper {
+    padding: 70px 5px;
+}
+
+.navbar-expand-lg .navbar-nav.side-nav {
+    flex-direction: column;
+}
+
+
+@media (min-width: 992px) {
+    #wrapper {
+        margin-left: 200px;
+        padding: 70px 5px 5px;
+    }
+
+    .navbar-nav.side-nav {
+        background: #585f66;
+        box-shadow: 2px 1px 2px rgba(0, 0, 0, .1);
+        position: fixed;
+        top: 56px;
+        flex-direction: column !important;
+        left: 0;
+        width: 200px;
+        overflow-y: auto;
+        bottom: 0;
+        overflow-x: hidden;
+        padding-bottom: 40px
+    }
+}
+
+
 .bg-royalblue {
     background-color: #4169E1 !important;
 }
